# simpac

./: .bazelignore  .bazelrc  .clang-format  .clang-format-3  .clangd  .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  cglm.BUILD  data.js  flecs.BUILD  glfw.BUILD  transform.idl
.github/workflows/: cloth-bench.yml
ecs2/: BUILD  app.cpp  app.h
ecs2/modules/: BUILD  base_module.h
examples/: BUILD  bounding_sphere.cpp  flecs_atomic.cpp  flecs_complex.cpp  flecs_load_module.cpp  flecs_test1.cpp  hw2a.idl  hw2b.cpp  muller.txt  test_particle1.cpp  test_particle2.cpp  test_particle3.cpp  test_particle4.cpp
idl/: transform.idl
lab/: README.md
lab/closest-point/: BUILD  main1.cpp
lab/pbd1/: BUILD  README.md  kernels.hpp  main_half_million_constraints.cpp  main_pbd1.cpp  main_pbd2.cpp  main_template.cpp  pbd1.hpp  pbd_bak.hpp  types.hpp
lab/rb-try1/: BUILD  README.md  collision.hpp  components.hpp  geometry.hpp  main_midphase.cpp  main_rb_pbd.cpp  main_rb_velocity.cpp  main_rb_velocity_fun1.cpp  main_rolling.cpp  main_sliding.cpp  main_stack.cpp  main_stack2.cpp  main_things.cpp  oop_hell.md  rigid_body.hpp  rigid_body2.hpp  solve.hpp
lab/rbmini/: components.hpp  debug.md  main_stack.cpp  picture.md  rigid_body2.hpp
large/rawphysics/: BUILD  broad.cpp  clipping.cpp  collider.h  constraints.cpp  constraints.h  entity.hpp  epa.cpp  gjk.cpp  kernels.hpp  main_collision1.cpp  main_collision2.cpp  main_orientation1.cpp  main_position1.cpp  main_prefab.cpp  main_spring1.cpp  main_template.cpp  types.h
large/rbmini2/: BUILD  README.md  main1.cpp  main2.cpp
large/survivors/: BUILD  game.cpp  game.h  main1.cpp  tmx.cpp
linalg/: 2d_laplace_interactive.cpp  BUILD  README.md  app.cpp  app.h  info.hpp  mt.cpp
linalg/modules/: BUILD  base_module.h
medium/: README.md
medium/ecs2/: README.md  app.cpp  main.cpp  test.cpp
medium/pbd1/: BUILD  components.hpp  main_half_million_constraints.cpp  main_pbd1.cpp  main_pbd2.cpp  main_template.cpp  pbd1.hpp  types.hpp
medium/rb-try1/: BUILD  collision.hpp  components.hpp  geometry.hpp  main_midphase.cpp  main_rb_pbd.cpp  main_rb_velocity.cpp  main_rb_velocity_fun1.cpp  main_rolling.cpp  main_sliding.cpp  main_stack.cpp  main_stack2.cpp  main_things.cpp  rigid_body.hpp  rigid_body2.hpp  solve.hpp
medium/rbmini/: 1try.md  README.md  collision.hpp  geometry.hpp  main_stack.cpp  picture.md
modules/: BUILD  README.md  graphics.cpp  graphics1.cpp  graphics2.bzl  graphics_module.cpp  hw2aux.cpp  model_module.cpp  resources.bzl
modules/graphics/: camera.h  components.h  fonts.cpp  fonts.h  graphics.cpp  graphics.h  graphics_platform_native.cpp  graphics_platform_wasm.cpp  graphics_test.cpp  graphics_test_node.py  input.h  lighting.h  lights.h  materials.h  pipelines.h  real.h  resources.h  shadows.h  systems.h  tags.h  test_graphics.cpp  types.h  vars.h
modules/include/: graphics.h  graphics1.h  graphics_module.h  hw2aux.h  lights.hpp  model_module.h
modules/pbd/: AABB.h  BoundingSphere.h  BoundingSphereHierarchy.h  Common.h  IndexedFaceMesh.h  LICENSE  ParticleData.h  VolumeIntegration.h  kdTree.h
modules/simplicial/: BUILD  mechanical_state.h  raylib_mesh.cpp  raylib_mesh.h  simplicial.cpp  simplicial.h  topology.cpp  topology.h
papers/: README.md
papers/macklin2016xpbd/: BUILD  README.md
papers/muller2007position/: README.md
papers/tournier2015stable/: BUILD  README.md
raw/: BUILD  broad.cpp  broad.h  clipping.cpp  clipping.h  collider.cpp  collider.h  constraints.cpp  constraints.h  constraints.hpp  entity.hpp  epa.h  funcs.hpp  gjk.h  kernels.hpp  main_body1.cpp  main_collision1.cpp  main_collision2.cpp  main_orientation1.cpp  main_position1.cpp  main_prefab.cpp  main_spring1.cpp  support.cpp  support.h  types.h  types.hpp
rbmini2/: BUILD  main1.cpp  main2.cpp
rbmini2/collision/: components.hpp  types.hpp
rbmini2/core/: tags.hpp  types.hpp
rbmini2/dynamics/: forces.hpp  types.hpp
rbmini2/geometry/: components.hpp  operations.hpp
rbmini2/sdf/: analytic.hpp  types.hpp
rbmini2/systems/: collision.hpp  dynamics.hpp
rbmini2/test/: geometry_test.cpp  sdf_test.cpp
rbmini2/util/: logging.hpp
resources/: generic.fnt  hello.txt
resources/models/: watermill.glb
resources/wasm/: index.html  run.md
scratches/: README.md
scratches/assimp1/: BUILD
scratches/coal1/: main1.cpp
scratches/eigen_checks/: BUILD  eigen1.cpp  rlights.h  shader_reload.cpp  shader_texture_waves.cpp  shaders_basic_lighting.cpp
scratches/fcl1/: BUILD  test_fcl_collision.cpp
scratches/flecs_tutorials/: nested_loop.cpp
scratches/font/: BUILD  main_template.cpp
scratches/fs/: BUILD  main_fs1.cpp  main_shader.cpp
scratches/gizmo/: BUILD  pbr3.cpp
scratches/instancing1/: BUILD  instancing2.c  raylib_instancing.cpp
scratches/libccd1/: BUILD  intersection_test.cpp  penetration_test.cpp
scratches/mass-spring1/: BUILD  main_prefab.cpp  types.hpp
scratches/octomap1/: BUILD  intersection_example.cpp
scratches/raylib/: shaders_deferred_render.c
scratches/shadertest/: BUILD  gizmo1.cpp  gizmo2.cpp  pbr1.cpp  pbr2.cpp  pbr3.cpp
scratches/test2/: BUILD  asset_loading.cpp  hw2b.cpp  hw3.cpp  hw3.idl  index.html  main_singleton.cpp  test_particle4.cpp  test_pbd1.cpp  test_window.cpp  test_window_with_module.cpp
scratches/thread/: BUILD  components.hpp  main1.cpp  main_heavy.cpp  main_light.cpp  nested_loop.cpp  pbd1.hpp  with-thread.cpp
serve/: index.html  run.md
small/: wasm.md
small/cloth/: BUILD  README.md  components.h  main_explicit.cpp  main_implicit.cpp  physics.h  queries.h  setup.h  systems.h  vars.h
small/coal1/: BUILD
small/config/: BUILD  main.cpp
small/explorer/: BUILD  conn.html  index.html  main.cpp  multi.html  pre_canvas.js  serve.ps1  serve.py  systems-worker.html  systems.html
small/fcl1/: BUILD
small/filesystem/: BUILD  main.cpp  orphan.txt
src/: example.cpp  example2.cpp  example4.cpp  glfw.cpp  hinge.cpp  main.cpp  simple_line.cpp  simple_module.h  test3.cpp
survivors/: BUILD  README.md  bvh.h  game.cpp  game.h  main1.cpp  tmx.cpp
(+425 files in other folders)
